Lesson 1 Assignment
>>> "Hello World"
'Hello World'
>>> a = "Hello World
  File "<stdin>", line 1
    a = "Hello World
        ^
SyntaxError: unterminated string literal (detected at line 1)
>>> a = "Hello World"
>>> a
'Hello World'
>>> b = hello
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hello' is not defined. Did you mean: 'help'?
>>> 1 = 2
  File "<stdin>", line 1
    1 = 2
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
>>> 1 + 1
2
>>> 1 == 3
False
>>> 1 == 1
True
>>> print("Completed by, Tanner Alba")
Completed by, Tanner Alba
